# thaiphon

./: .gitignore  CHANGELOG.md  Makefile  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: bench_memory.py
src/thaiphon/: __init__.py  api.py  errors.py  overrides.py  registry.py
src/thaiphon/derivation/: __init__.py  coda.py  onset.py  syllable_type.py  tone.py  vowel.py
src/thaiphon/lexicons/: __init__.py  ai_20.py  calendar.py  cluster_overrides.py  df_stems.py  exact.py  indic_detector.py  indic_learned.py  irregular.py  length_overrides.py  loan_final_f.py  loanword.py  loanword_detector.py  o_leading.py  ror_ror.py  royal.py  rue.py  silent_h.py  thor.py
src/thaiphon/model/: __init__.py  candidate.py  enums.py  letters.py  phoneme.py  syllable.py  word.py
src/thaiphon/normalization/: expand.py  unicode_norm.py
src/thaiphon/phonology/: model.py
src/thaiphon/pipeline/: __init__.py  context.py  runner.py
src/thaiphon/reader/: thai_orthography_reader.py
src/thaiphon/renderers/: __init__.py  _loan_coda.py  base.py  ipa.py  lmt.py  mapping.py  morev.py  paiboon.py  rtgs.py  rtl.py  tlc.py
src/thaiphon/segmentation/: __init__.py  longest.py
src/thaiphon/syllabification/: __init__.py  generator.py  ranker.py  strategies.py
src/thaiphon/tables/: __init__.py  clusters.py  consonants.py  final_collapse.py  leaders.py  tone_matrix.py
src/thaiphon/text/: diacritics.py
src/thaiphon/tokenization/: tcc.py
tests/: README.md  conftest.py  test_api.py  test_edge_cases.py  test_loanword_preservation.py  test_morev_renderer.py  test_nfc_normalization.py  test_phonology_model.py  test_reading_profiles.py  test_thai_orthography_reader_cc_split_tone_borrowing.py  test_thai_orthography_reader_ho_nam_and_oo.py  test_thai_orthography_reader_pali_sanskrit_linking_a.py  test_thai_orthography_reader_real_words.py
tests/etalon/: __init__.py  ipa_diagnostics.py  test_wiktionary_ipa_full.py  test_wiktionary_ipa_sample.py
tests/fixtures/: README.md  wiktionary_ipa_sample.jsonl
tests/morev/: test_morev_alphabet_table.py  test_morev_corpus_csv.py  test_morev_renderer.py  test_morev_renderer_loanwords.py  test_morev_royal_lexicon.py
tests/orthography/: test_thai_orthography_reader_cc_split_tone_borrowing.py  test_thai_orthography_reader_ho_nam_and_oo.py  test_thai_orthography_reader_pali_sanskrit_linking_a.py  test_thai_orthography_reader_real_words.py
tests/rules/: test_abbreviations.py  test_ai_20.py  test_ai_ui_frames.py  test_closed_cvc_tone_marked_onset.py  test_cluster_strategy.py  test_df_strategy.py  test_indic_detector.py  test_linking_strategy.py  test_loanword_detector.py  test_loanword_expansion.py  test_loanword_lexicon.py  test_normalization.py  test_o_leading.py  test_onset_resolution.py  test_overrides.py  test_pre_vowel_cvc_coda.py  test_rue.py  test_segmenter.py  test_silent_h.py  test_syllable_type.py  test_tcc.py  test_thor.py  test_vowel_resolution.py
tests/test_renderers/: test_ipa.py  test_lmt.py  test_morev.py  test_paiboon.py  test_rtgs.py  test_rtl.py  test_tlc.py
