[build-system]
requires = ["hatchling>=1.20", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "thaiphon"
version = "0.6.0"
description = "Thai phonology engine with pluggable transliteration systems."
dynamic = ["readme"]
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Boris Savinov" }]
dependencies = []
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.10",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/thaiphon"]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = 'thaiphon/main/docs/pipeline\.png'
replacement = 'thaiphon/v$HFPR_VERSION/docs/pipeline.png'

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/thaiphon"]
